src2/miniFE-omp_nvc/log_run_bench.err
main.cpp: In function 'int main(int, char**)':
main.cpp:108:28: error: 'omp_get_max_threads' was not declared in this scope
  108 |   const int thread_count = omp_get_max_threads();
      |                            ^~~~~~~~~~~~~~~~~~~
make[1]: *** [make_targets:35: main.o] Error 1
make: *** [Makefile.NVD:2: run] Error 2
